@@ -15,6 +15,7 @@ v0.99.12 xx xxxx, xxxx
 * Seqcrop command can now be used in scripts
 * Added autocropping of wide-field images, as well as using a selection for plate solving
 * WCS data is now updated after geometric transformations (mirror, rotate and crop)
+* Allows to force debayer of SER files
 
 v0.99.10.1 June 23, 2021
 Patch version to fix some issues
