@@ -15,6 +15,7 @@ xx/xx/xx
 * Seqcrop command can now be used in scripts
 * Added autocropping of wide-field images, as well as using a selection for plate solving
 * WCS data is now updated after geometric transformations (mirror, rotate and crop)
+* Allows to force debayer of SER files
 
 siril 0.99.10.1
 06/23/21
